# compliance-check

./: AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/compliance_check/: __init__.py  cli.py  core.py
tests/: test_core.py
